--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,16 @@
   <link rel="stylesheet"href="./style.css" type="text/css" />
 </head>
 <body>
-  <div>
+  <div id="ajax_wrapper" class="hidden"><div id="ajax_content"></div></div>
+  <div class="app_wrapper">
+    
 
+    <strong>cohorts</strong>
     <div id="cohort_nav">
 
     </div>
 
-    
+    <h5 id="cohort_title"></h5>
     <div class="container">
 
         <div id="student_cards" class="row">
@@ -27,6 +30,7 @@
 
 
   </div>
+  
   <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
