main functionality is there, just need to finish the delete username button and refresh the view after an ajax request

--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,14 @@
   <div id="ajax_wrapper" class="hidden"><div id="ajax_content"></div></div>
   <div class="app_wrapper">
     
-
+  
     <strong>cohorts</strong>
     <div id="cohort_nav">
 
     </div>
 
     <h5 id="cohort_title"></h5>
+    <div id="edit_cohort_wrapper"></div>
     <div class="container">
 
         <div id="student_cards" class="row">
@@ -35,8 +36,9 @@
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
+  <script src="./globals.js"></script>
   <script src="./templates.js"></script>
-  <script src="./viewStudents.js"></script>
+  <script src="./app.js"></script>
   <script src="./index.js"></script>
 </body>
 </html>
