delete functionality is working

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
   <div id="ajax_wrapper" class="hidden"><div id="ajax_content"></div></div>
+  <div id="modal_wrapper" class="hidden"><div id="modal_content"></div></div>
   <div class="app_wrapper">
     
   
