--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <div id="ajax_wrapper" class="hidden"><div id="ajax_content"></div></div>
   <div id="modal_wrapper" class="hidden"><div id="modal_content"></div></div>
   <div class="app_wrapper">
-    
+    <div id="secret_form_wrapper"></div>
   
     <strong>cohorts</strong>
     <div id="cohort_nav">
