all functionality is there, just needs organizing

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
     <div id="secret_form_wrapper"></div>
   
     <strong>cohorts</strong>
+    <a id="create_cohort_link" class="create_cohort_link hidden"  href="">create</a>
     <div id="cohort_nav">
-
     </div>
 
     <h5 id="cohort_title"></h5>
