--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <div id="edit_cohort_wrapper"></div>
     <div class="container">
 
-        <div id="student_cards" class="row">
+        <div id="profile_cards" class="row">
           
         </div>
 
@@ -38,7 +38,9 @@
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
   <script src="./globals.js"></script>
-  <script src="./templates.js"></script>
+  <script src="./cohorts_logic.js"></script>
+  <script src="./profile_card.js"></script>
+  <script src="./profiles_logic.js"></script>
   <script src="./app.js"></script>
   <script src="./index.js"></script>
 </body>
