--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <div class="container">
 
         <div id="profile_cards" class="row">
-          
+          <p>select a cohort from the list above</p>
         </div>
 
     </div>
